exports[`transform-fs-promises: cjs > const fs = require("fs/promises"); 1`] = `
### Input

      1 | const fs = require("fs/promises");

### Output

      1 | const fs = require("fs").promises;
`;

exports[`transform-fs-promises: cjs > const fs = require("node:fs/promises"); 1`] = `
### Input

      1 | const fs = require("node:fs/promises");

### Output

      1 | const fs = require("fs").promises;
`;

exports[`transform-fs-promises: cjs > const { readFile } = require("fs/promises"); 1`] = `
### Input

      1 | const { readFile } = require("fs/promises");

### Output

      1 | const {
      2 |   readFile
      3 | } = require("fs").promises;
`;

exports[`transform-fs-promises: cjs > const { readFile } = require("node:fs/promises"); 1`] = `
### Input

      1 | const { readFile } = require("node:fs/promises");

### Output

      1 | const {
      2 |   readFile
      3 | } = require("fs").promises;
`;

exports[`transform-fs-promises: cjs > const { readFile, stat } = require("fs/promises"); 1`] = `
### Input

      1 | const { readFile, stat } = require("fs/promises");

### Output

      1 | const {
      2 |   readFile,
      3 |   stat
      4 | } = require("fs").promises;
`;

exports[`transform-fs-promises: cjs > const { readFile, stat } = require("node:fs/promises"); 1`] = `
### Input

      1 | const { readFile, stat } = require("node:fs/promises");

### Output

      1 | const {
      2 |   readFile,
      3 |   stat
      4 | } = require("fs").promises;
`;

exports[`transform-fs-promises: esm > const fs = import("fs/promises"); 1`] = `
### Input

      1 | const fs = import("fs/promises");

### Output

      1 | const fs = import("fs").then(m => m.promises);
`;

exports[`transform-fs-promises: esm > const fs = import("node:fs/promises"); 1`] = `
### Input

      1 | const fs = import("node:fs/promises");

### Output

      1 | const fs = import("fs").then(m => m.promises);
`;

exports[`transform-fs-promises: esm > export * from "fs/promises"; 1`] = `
### Input

      1 | export * from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | export default _promises;
`;

exports[`transform-fs-promises: esm > export * from "node:fs/promises"; 1`] = `
### Input

      1 | export * from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | export default _promises;
`;

exports[`transform-fs-promises: esm > export { readFile } from "fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
`;

exports[`transform-fs-promises: esm > export { readFile } from "fs/promises"; import fs from "fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "fs/promises"; import fs from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
      6 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > export { readFile } from "fs/promises"; import { readFile } from "fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "fs/promises"; import { readFile } from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
      6 | import { promises as _promises2 } from "fs";
      7 | const {
      8 |   readFile
      9 | } = _promises2;
`;

exports[`transform-fs-promises: esm > export { readFile } from "node:fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
`;

exports[`transform-fs-promises: esm > export { readFile } from "node:fs/promises"; import fs from "node:fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "node:fs/promises"; import fs from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
      6 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > export { readFile } from "node:fs/promises"; import { readFile } from "node:fs/promises"; 1`] = `
### Input

      1 | export { readFile } from "node:fs/promises"; import { readFile } from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile: _readFile
      4 | } = _promises;
      5 | export { readFile as _readFile };
      6 | import { promises as _promises2 } from "fs";
      7 | const {
      8 |   readFile
      9 | } = _promises2;
`;

exports[`transform-fs-promises: esm > import * as fs from "fs/promises"; 1`] = `
### Input

      1 | import * as fs from "fs/promises";

### Output

      1 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > import * as fs from "node:fs/promises"; 1`] = `
### Input

      1 | import * as fs from "node:fs/promises";

### Output

      1 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > import fs from "fs/promises"; 1`] = `
### Input

      1 | import fs from "fs/promises";

### Output

      1 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > import fs from "node:fs/promises"; 1`] = `
### Input

      1 | import fs from "node:fs/promises";

### Output

      1 | import { promises as fs } from "fs";
`;

exports[`transform-fs-promises: esm > import fs, { readFile } from "fs/promises"; 1`] = `
### Input

      1 | import fs, { readFile } from "fs/promises";

### Output

      1 | import fs, { promises as _promises } from "fs";
      2 | const {
      3 |   readFile
      4 | } = _promises;
`;

exports[`transform-fs-promises: esm > import fs, { readFile } from "node:fs/promises"; 1`] = `
### Input

      1 | import fs, { readFile } from "node:fs/promises";

### Output

      1 | import fs, { promises as _promises } from "fs";
      2 | const {
      3 |   readFile
      4 | } = _promises;
`;

exports[`transform-fs-promises: esm > import { readFile } from "fs/promises"; 1`] = `
### Input

      1 | import { readFile } from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile
      4 | } = _promises;
`;

exports[`transform-fs-promises: esm > import { readFile } from "node:fs/promises"; 1`] = `
### Input

      1 | import { readFile } from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile
      4 | } = _promises;
`;

exports[`transform-fs-promises: esm > import { readFile, stat } from "fs/promises"; 1`] = `
### Input

      1 | import { readFile, stat } from "fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile,
      4 |   stat
      5 | } = _promises;
`;

exports[`transform-fs-promises: esm > import { readFile, stat } from "node:fs/promises"; 1`] = `
### Input

      1 | import { readFile, stat } from "node:fs/promises";

### Output

      1 | import { promises as _promises } from "fs";
      2 | const {
      3 |   readFile,
      4 |   stat
      5 | } = _promises;
`;
